# flexitime

./: Cargo.toml  README.md
.github/workflows/: release.yaml
flexitime/: CHANGELOG.md  Cargo.toml  README.md
flexitime-bin/: Cargo.toml
flexitime-cli/: CHANGELOG.md  Cargo.toml
flexitime-cli/src/: cli.rs  main.rs
flexitime/src/: error.rs
flexitime/src/parser/: mod.rs  time.rs
flexitime/src/parser/absolute/: date.rs  day_offset.rs  mod.rs  month_offset.rs  time.rs  wallclock_time.rs
flexitime/src/parser/relative/: mod.rs  suffix.rs  time.rs  units.rs
src/: error.rs  lib.rs
src/parser/: mod.rs  time.rs
src/parser/absolute/: day_offset.rs  mod.rs  time.rs  timezone.rs  wallclock_time.rs
src/parser/relative/: mod.rs  suffix.rs  units.rs
