[package]
name = "flexitime-cli"
version = "0.1.1"
edition = "2024"
authors = ["Dan O'Brien <dob9601@gmail.com>"]
license = "MIT"
description = "A command-line tool for flexible time parsing"

[[bin]]
name = "flexitime"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
flexitime = "0.1.0"
